@@ -2,7 +2,6 @@ package me.prettyprint.cassandra.connection;
 
 import com.ecyrd.speed4j.StopWatch;
 import com.ecyrd.speed4j.StopWatchFactory;
-import com.ecyrd.speed4j.log.PeriodicalLog;
 
 public class SpeedForJOpTimer implements HOpTimer {
 
@@ -10,17 +9,10 @@ public class SpeedForJOpTimer implements HOpTimer {
 
   public SpeedForJOpTimer(String clusterName) {
     //
-    // This sets up the Speed4J logging system. Alternatively, we could
-    // use the speed4j.properties -file. This was chosen just so that
-    // it wouldn't confuse anyone and would work pretty much the same
-    // way as what the old hector config does.
+    // This uses speed4j.properties to instantiate a new logger.
+	//  pay attention to the naming scheme 
     //
-    PeriodicalLog slog = new PeriodicalLog();
-    slog.setName("hector-" + clusterName);
-    slog.setPeriod(60); // 60 seconds
-    slog.setSlf4jLogname("me.prettyprint.cassandra.hector.TimingLogger");
-
-    stopWatchFactory = StopWatchFactory.getInstance(slog);
+    stopWatchFactory = StopWatchFactory.getInstance("hector-"+clusterName);
   }
 
   @Override
