@@ -10,6 +10,8 @@ Move EmbeddedSchemaLoader and EmbeddedServerHelper into the hector-test module, 
 - hector-core depends only on cassandra-thrift, not cassandra-all
 - Remove dependencies on avro, high-scale-lib 
 Threads started by hector are daemon threads, https://github.com/rantav/hector/issues/220
+Fixed speed4j setup - modified hector so it only uses speed4j.properties to configure logging.  the logger
+  name must be of the form "hector-<cluster-name>".  Updating wiki page as well.
 
 0.8.0-2
 =======
